Ahora calcula la binomial

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">CalculadoraDistribuciones</string>
+    <string name="resultadoLabel">resultado ira aqui</string>
 </resources>
