Añadido selector de operadores. Hay un bug que hay que solucionar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">CalculadoraDistribuciones</string>
     <string name="resultadoLabel">El resultado irá aquí</string>
+    <string name="operadorActual">=</string>
 </resources>
